--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,4 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,visualstudiocode,node
 javascript_test.ipynb
+test.js
